<resources>
    <string name="app_name">Cowboys en Indiana</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="nav_menu_dashboard">Dashboard</string>
    <string name="nav_menu_kid">Kinderen</string>
    <string name="nav_menu_birthday">Verjaardagen</string>
    <string name="nav_menu_theme">Themas</string>
    <string name="nav_menu_about_app">Over de app</string>
    <string name="nav_menu_log_out">Uitloggen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="title_activity_correction">Correction</string>
    <string name="header_activity_correction">Corrigeren</string>
    <string name="group">Groep</string>
    <string name="presence">Aanwezig</string>
    <string name="delete">Verwijderen</string>
    <string name="modify">Aanpassen</string>
    <string name="title_activity_add_child">Toevoegen</string>
    <string name="add">Toevoegen</string>
    <string name="title_activity_add_child_detail">AddChildDetail</string>
    <string name="kdv_ceni"><![CDATA[Kinderdagverblijf - Cowboys & Indiana]]></string>
    <string name="hh">kdv_ceni</string>
</resources>
