<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.cowboysenindiana.app.nl.cowboysenindiana.app.data.AddChildDetail">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_add_child"
        android:id="@+id/headerAddChildDetail"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="24sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextAddChildDetailName"
        android:layout_below="@+id/headerAddChildDetail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:hint="Naam van kind" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group"
        android:id="@+id/textViewAddChildDetailGroup"
        android:layout_below="@+id/editTextAddChildDetailName"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButtonAddChildDetailGroup1"
        android:layout_below="@+id/editTextAddChildDetailName"
        android:layout_toStartOf="@+id/editTextAddChildDetailName"
        android:text="1" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButtonAddChildDetailGroup2"
        android:text="2"
        android:layout_below="@+id/editTextAddChildDetailName"
        android:layout_alignStart="@+id/editTextAddChildDetailName" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButtonAddChildDetailGroup3"
        android:text="3"
        android:layout_below="@+id/editTextAddChildDetailName"
        android:layout_toEndOf="@+id/radioButtonAddChildDetailGroup2" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButtonAddChildDetailGroup4"
        android:text="4"
        android:layout_below="@+id/editTextAddChildDetailName"
        android:layout_toEndOf="@+id/radioButtonAddChildDetailGroup3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Begintijd"
        android:id="@+id/textView4"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/timePicker"
        android:timePickerMode="spinner"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/radioButtonAddChildDetailGroup1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Eindtijd"
        android:id="@+id/textView5"
        android:textSize="18sp"
        android:layout_below="@+id/timePicker"
        android:layout_toRightOf="@id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView4" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/timePicker2"
        android:timePickerMode="spinner"
        android:layout_below="@+id/timePicker"
        android:layout_toRightOf="@id/textView5"
        android:layout_alignStart="@+id/timePicker" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/buttonAddChildDetailDelete"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify"
        android:id="@+id/buttonAddChildDetailModify"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/timePicker2" />

</RelativeLayout>
